<resources>
    <string name="app_name">Depenses</string>
    <string name="option_liste_depenses">Liste des dépenses</string>
    <string name="option_graphique_depenses">Graphique des dépenses</string>

    <string name="option_modifier">Modifier</string>
    <string name="option_annuler">Annuler</string>

    <string name="titre_ajouter_dep">Ajouter dépense</string>
    <string name="champ_montant">Montant :</string>
    <string name="champ_intitule">Intitulé :</string>
    <string name="champ_description">Description :</string>
    <string name="champ_categorie">Catégorie :</string>
    <string name="champ_programme">Programmée :</string>
    <string name="champ_date">Date :</string>
    <string name="champ_cycle">Cycle :</string>
    <string name="valider">✔ Valider</string>
    <string name="annuler">❌ Annuler</string>
    <string name="titre_liste_cat">Catégories</string>
    <string name="titre_filtre">Filtrer par :</string>
    <string name="prix_decroissant">Prix décroissant</string>
    <string name="prix_croissant">Prix croissant</string>
    <string name="titre_ajouter">Ajouter :</string>
    <string name="btn_aj_depense">💲 DEPENSE</string>
    <string name="btn_gerer_cat">Gérer mes catégories</string>

    <string-array name="categories">
        <item>Escence</item>
        <item>Nourriture</item>
        <item>Loisir</item>
        <item>Factures</item>
        <item>Autre</item>
    </string-array>

    <string-array name="cycle">
        <item>Mensuel</item>
        <item>Hebdomadaire</item>
    </string-array>

    <string-array name="couleurs">
        <item>Rouge</item>
        <item>Vert</item>
        <item>Jaune</item>
        <item>Bleu</item>
        <item>Orange</item>
        <item>Rouge</item>
    </string-array>

    <string name="categorie_nom">Nom</string>
    <string name="categorie_couleur">🎨 Couleur</string>
    <string name="categorie_icone">Icônes</string>

    <string name="buttonValider">✔ Valider</string>
    <string name="buttonAnnuler">❌ Annuler</string>

    <string name="aide_recherche">Saisir la recherche</string>
    <string name="resultat_recherche">Resultats pour </string>
    <string name="menu_recherche">Recherche</string>
    <string name="textViewDepenseMois">"Dépenses du mois : "</string>
    <string name="buttonFiltre">Filtre</string>

    <string name="option_supprimer">Supprimer</string>

    <string name="titre_categorie">Catégorie</string>



    <string name="croissant">Croissant</string>
    <string name="decroissant">Décroissant</string>
    <string name="lbl_mensuel">Mensuel :</string>
    <string name="essence">Essence</string>
    <string name="nourriture">Nourriture</string>
    <string name="loisir">Loisir</string>
    <string name="_5">5%</string>
    <string name="_15">15%</string>
    <string name="_30">30%</string>
    <string name="facture">Facture</string>
    <string name="_50">50%</string>

</resources>