<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/marge_app">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_filtre"
        android:textSize="@dimen/taille_titre_popup" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prix_croissant" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prix_decroissant" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_ajouter"
        android:textSize="@dimen/taille_titre_popup" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_aj_depense"
        android:textSize="@dimen/taille_text_btn"
        android:onClick="ajouterDepense" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_gerer_cat"
        android:textSize="@dimen/taille_text_btn"
        android:onClick="gererCategorie" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Accueil"
        android:textSize="@dimen/taille_text_btn"
        android:onClick="retourAccueil" />

</LinearLayout>