<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PartDepenses"
    android:stretchColumns="2">

    <TableRow
        android:layout_marginTop="@dimen/marge_app"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_croissant"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/largeurBtnDep"
            android:layout_marginLeft="@dimen/marge_app"
            android:layout_marginRight="@dimen/marge_app"
            android:text="@string/croissant"
            />
        <Button
            android:id="@+id/btn_decroissant"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marge_app"
            android:layout_marginRight="@dimen/marge_app"
            android:layout_width="@dimen/largeurBtnDep"
            android:text="@string/decroissant"
            />
    </TableRow>
    <TextView
        android:id="@+id/lbl_periode"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/lbl_mensuel"
        android:textSize="@dimen/labelSizeDep"
        android:layout_marginLeft="@dimen/marge_app"
        android:layout_marginTop="@dimen/marge_app"
        android:layout_marginBottom="@dimen/marge_app"
        />

    <TableRow
        android:layout_marginTop="@dimen/marge_app">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:gravity="center"
            >
            <TextView
                android:text="@string/loisir"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/marge_app"
                android:layout_marginRight="@dimen/marge_app"
                />
            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marge_app"
                android:layout_marginRight="@dimen/marge_app"
                />
            <TextView
                android:text="@string/_5"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/marge_app"
                android:layout_marginRight="@dimen/marge_app"/>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:layout_marginTop="@dimen/marge_app">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:gravity="center"
            >
            <TextView
                android:text="@string/essence"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/marge_app"
                android:layout_marginRight="@dimen/marge_app"
                />
            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="@dimen/largeurProgressBar"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marge_app"
                android:layout_marginRight="@dimen/marge_app"
                />
            <TextView
                android:text="@string/_15"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/marge_app"
                android:layout_marginRight="@dimen/marge_app"/>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:layout_marginTop="@dimen/marge_app">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:gravity="center"
            >
            <TextView
                android:text="@string/nourriture"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/marge_app"
                android:layout_marginRight="@dimen/marge_app"
                />
            <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="@dimen/largeurProgressBar"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marge_app"
                android:layout_marginRight="@dimen/marge_app"
                />
            <TextView
                android:text="@string/_30"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/marge_app"
                android:layout_marginRight="@dimen/marge_app"/>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:layout_marginTop="@dimen/marge_app">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:gravity="center"
            >
            <TextView
                android:text="@string/facture"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/marge_app"
                android:layout_marginRight="@dimen/marge_app"
                />
            <ProgressBar
                android:id="@+id/progressBar4"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="@dimen/largeurProgressBar"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marge_app"
                android:layout_marginRight="@dimen/marge_app"
                />
            <TextView
                android:text="@string/_50"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/marge_app"
                android:layout_marginRight="@dimen/marge_app"/>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:layout_marginTop="@dimen/marge_app"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btn_hebdomadaire"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/largeurBtnDep"
            android:layout_marginLeft="@dimen/marge_app"
            android:layout_marginRight="@dimen/marge_app"
            android:text="Hebdomadaire"
            />
        <Button
            android:id="@+id/btn_mensuel"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/largeurBtnDep"
            android:layout_marginLeft="@dimen/marge_app"
            android:layout_marginRight="@dimen/marge_app"
            android:text="Mensuel"
            />
    </TableRow>

</TableLayout>