<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textViewNomCategorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categorie_nom" />

        <EditText
            android:id="@+id/editTextNomCategorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textViewCouleurCategorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categorie_couleur" />

        <Spinner
            android:id="@+id/spinnerCouleurCategorie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </TableRow>

    <TextView
        android:id="@+id/textViewIcone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categorie_icone" />


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_span="2">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/roundcorner"
                android:src="@drawable/dejeuner" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/roundcorner"
                android:src="@drawable/dejeuner" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/roundcorner"
                android:src="@drawable/dejeuner" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/roundcorner"
                android:src="@drawable/dejeuner" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/roundcorner"
                android:src="@drawable/dejeuner" />
        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_span="2">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/roundcorner"
                android:src="@drawable/dejeuner" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/roundcorner"
                android:src="@drawable/dejeuner" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/roundcorner"
                android:src="@drawable/dejeuner" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/roundcorner"
                android:src="@drawable/dejeuner" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/roundcorner"
                android:src="@drawable/dejeuner" />
        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_span="2">

            <Button
                android:id="@+id/buttonValider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonValider" />

            <Button
                android:id="@+id/buttonAnnuler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonAnnuler" />

        </LinearLayout>

    </TableRow>

</TableLayout>